# exercicioGaragem

./: pyproject.toml
core/: settings.py  urls.py
models/: acessorio.py  admin.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
models/migrations/: 0001_initial.py  0002_alter_acessorio_id_alter_categoria_id_alter_cor_id_and_more.py  0002_veiculo_imagem.py  0003_remove_veiculo_imagem_veiculo_imagem.py  0004_alter_veiculo_preco.py  0005_alter_veiculo_preco.py  0006_alter_veiculo_cor_alter_veiculo_descricao_and_more.py
serializers/: acessorio.py  apps.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
views/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
